--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=AIzaSyCcAqKUUtkXZZSSj-uEdgf7pYhSFFuxYpo
+MONGODB_URI=mongodb+srv://sasiprabha5002:sasi282005@chatbot.01i1n.mongodb.net/?retryWrites=true&w=majority&appName=chatbot
